[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/GUI/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/GUI/label_HP_bg.png" type="Texture" id=2]
[ext_resource path="res://Game/GUI/GUI.gd" type="Script" id=3]
[ext_resource path="res://Assets/timer.png" type="Texture" id=4]
[ext_resource path="res://Assets/sprites.png" type="Texture" id=5]
[ext_resource path="res://Assets/cancel_expansion.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 22
use_filter = true
extra_spacing_bottom = 2
extra_spacing_char = 1
font_data = ExtResource( 1 )

[sub_resource type="GDScript" id=5]
script/source = "extends Button

onready var VictoryGUI: Node = Scenes.Game.get_node(\"GUI/GUI/VictoryGUI\")

#GameButton:
func _on_Button_pressed() -> void:
	Scenes.Game.emit_signal(\"button_clicked\")

func _on_GoBackButton_pressed() -> void:
	pass # Replace with function body.

func _on_CloseButton_pressed() -> void:
	VictoryGUI.visible = false	
"

[sub_resource type="DynamicFont" id=6]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
use_filter = true
font_data = ExtResource( 1 )

[node name="GUI" type="Node2D"]
script = ExtResource( 3 )

[node name="OpponentName" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 5.0
margin_right = 158.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 1 )
text = "Opponent: 
You're X"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopText" type="NinePatchRect" parent="."]
margin_left = 20.0
margin_top = 64.0
margin_right = 120.0
margin_bottom = 104.0
rect_min_size = Vector2( 100, 40 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="TopText"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "X TURN"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BottomText" type="NinePatchRect" parent="."]
margin_left = 20.0
margin_top = 99.0
margin_right = 120.0
margin_bottom = 154.0
rect_min_size = Vector2( 100, 40 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="BottomText"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -15.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 1 )
text = "X: 2
O: 2"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GameButton" type="NinePatchRect" parent="."]
margin_left = 20.0
margin_top = 165.0
margin_right = 120.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 40 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="GameButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameButton" type="Button" parent="GameButton"]
margin_right = 102.0
margin_bottom = 56.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
script = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timers" type="Control" parent="."]
margin_top = 44.0
margin_right = 40.0
margin_bottom = 84.0

[node name="TopTimer" type="TextureRect" parent="Timers"]
margin_left = 5.0
margin_top = 195.0
margin_right = 39.0
margin_bottom = 242.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Timers/TopTimer"]
margin_left = 34.0
margin_top = 8.0
margin_right = 112.0
margin_bottom = 41.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeIndicator" type="Label" parent="Timers/TopTimer/TextureRect"]
margin_left = 13.0
margin_top = 7.0
margin_right = 66.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 6 )
text = "03:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomTimer" type="TextureRect" parent="Timers"]
margin_left = 5.0
margin_top = 244.0
margin_right = 39.0
margin_bottom = 291.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Timers/BottomTimer"]
margin_left = 34.0
margin_top = 8.0
margin_right = 112.0
margin_bottom = 41.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeIndicator" type="Label" parent="Timers/BottomTimer/TextureRect"]
margin_left = 13.0
margin_top = 7.0
margin_right = 66.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 6 )
text = "03:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpansionButton" type="NinePatchRect" parent="."]
margin_left = 20.0
margin_top = 350.0
margin_right = 120.0
margin_bottom = 405.0
rect_min_size = Vector2( 100, 40 )
rect_scale = Vector2( 1, 1.00251 )
texture = ExtResource( 2 )

[node name="Text" type="Label" parent="ExpansionButton"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.00519, 0.994486 )
custom_fonts/font = SubResource( 7 )
text = "EXPAND
2 available"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpansionButton" type="Button" parent="ExpansionButton"]
margin_right = 102.0
margin_bottom = 56.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
script = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileDisplay" type="NinePatchRect" parent="."]
margin_left = 46.0
margin_top = 410.0
margin_right = 96.0
margin_bottom = 460.0
texture = ExtResource( 2 )

[node name="TileTexture" type="NinePatchRect" parent="TileDisplay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 5 )
region_rect = Rect2( 1, 66, 63, 63 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelDisplay" type="NinePatchRect" parent="."]
unique_name_in_owner = true
visible = false
margin_left = 36.0
margin_top = 470.0
margin_right = 106.0
margin_bottom = 540.0
texture = ExtResource( 2 )

[node name="CancelTexture" type="TextureButton" parent="CancelDisplay"]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
disabled = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="CancelDisplay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -35.5
margin_right = 35.5
margin_bottom = 19.0
custom_fonts/font = SubResource( 8 )
text = "Cancel"
align = 1

[node name="VictoryGUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Main" type="Control" parent="VictoryGUI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="VictoryRect" type="ColorRect" parent="VictoryGUI/Main"]
margin_left = 219.0
margin_top = 60.0
margin_right = 774.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="VictoryGUI/Main/VictoryRect"]
margin_left = 93.0
margin_top = 8.0
margin_right = 453.0
margin_bottom = 121.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "X Won!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoBackButton" type="TextureButton" parent="VictoryGUI/Main"]
margin_left = 361.0
margin_top = 179.0
margin_right = 621.0
margin_bottom = 241.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="VictoryGUI/Main/GoBackButton"]
margin_left = -47.0
margin_top = 2.0
margin_right = 313.0
margin_bottom = 115.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Go Back"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="GameButton/GameButton" to="." method="_on_GameButton_pressed"]
[connection signal="pressed" from="ExpansionButton/ExpansionButton" to="." method="_on_ExpansionButton_pressed"]
[connection signal="pressed" from="VictoryGUI/Main/GoBackButton" to="." method="_on_GoBackButton_pressed"]
